[package]
name = "pwasm-ethereum"
version = "0.3.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/pwasm-ethereum"
homepage = "https://github.com/paritytech/pwasm-ethereum"
documentation = "https://paritytech.github.io/pwasm-ethereum/pwasm_ethereum/"
description = "Externs library to interact with Ethereum-like network"
keywords = ["wasm", "parity", "ethereum", "blockchain"]
categories = ["no-std", "embedded"]

[build-dependencies]
parity-hash = { version = "1", default-features = false }

[dependencies]
pwasm-std = "0.7"

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[features]
default = []
std = ["pwasm-std/std", "parity-hash/std", "bigint/std", "byteorder/std"]