[package]
name = "pwasm-ethereum"
version = "0.6.1"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/pwasm-ethereum"
homepage = "https://github.com/paritytech/pwasm-ethereum"
documentation = "https://paritytech.github.io/pwasm-ethereum/pwasm_ethereum/"
description = "Externs library to interact with Ethereum-like network"
keywords = ["wasm", "parity", "ethereum", "blockchain"]
categories = ["no-std", "embedded"]

[build-dependencies]
parity-hash = { version = "1.2.2", default-features = false }

[dependencies]
pwasm-std = "0.10"

[dependencies.uint]
version = "0.3"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.parity-hash]
version = "1.2.2"
default-features = false

[features]
default = []
kip4 = []
std = ["pwasm-std/std", "parity-hash/std", "uint/std", "byteorder/std"]
