[package]
name = "pwasm-ethereum"
version = "0.8.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/pwasm-ethereum"
homepage = "https://github.com/paritytech/pwasm-ethereum"
documentation = "https://paritytech.github.io/pwasm-ethereum/pwasm_ethereum/"
description = "Externs library to interact with Ethereum-like network"
keywords = ["wasm", "parity", "ethereum", "blockchain"]
categories = ["no-std", "embedded"]

[dependencies]
pwasm-std = "0.13"
byteorder = { version = "1", default-features = false }

[features]
default = []
kip4 = []
kip6 = []
std = ["pwasm-std/std", "byteorder/std"]
